schema/testdata/errors/expressions_compare_model_operand_base_diff_types.keel
model BankAccount {
    fields {
        identity Identity {
            @unique
            @relation(mainAccount)
        }
    }

    actions {
        get getBankAccount(id) {
            //expect-error:32:38:E027:Cannot compare BankAccount with operator 'notin'
            @where(bankAccount not in ctx.identity.mainAccount)
        }
    }
}
